-
Bug
-
Resolution: Done
-
Not Evaluated
-
Qt Creator 4.0.0-beta1
Steps to reproduce:
- create Quick UI project from template (I've used Qt5.4, no ui.qml file)
- start debugging
- QC displays a message box (Warning, missing debug info...) although this should not be necessary for Quick debugging
Note: This worked without message box in QC 3.6
For Gerrit Dashboard: QTCREATORBUG-15896 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
153284,2 | Debugger: Fix language/engine detection | 4.0 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |