Debugger: Fix language/engine detection

Task-number: QTCREATORBUG-15896
Change-Id: I5bc5ed11652932911bdf3b1107998c54353b1268
Reviewed-by: hjk <hjk@theqtcompany.com>